<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="59dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:paddingBottom="60dp">

            <ImageView
                android:id="@+id/imageView_Logo_empresa"
                android:layout_width="132dp"
                android:layout_height="115dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cake" />

            <TextView
                android:id="@+id/textView_Nome_Empresa"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="56dp"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_Logo_empresa"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Bolins Ana Maria" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="9dp"
                android:text="@string/txt_location"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView_Localizacao"
                app:layout_constraintStart_toEndOf="@+id/imageView_Logo_empresa"
                app:layout_constraintTop_toBottomOf="@+id/textView_Nome_Empresa" />

            <TextView
                android:id="@+id/textView_Localizacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="67dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView_Nome_Empresa"
                tools:text="Barueri-SP" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="9dp"
                android:text="@string/txt_function"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView_Cargo"
                app:layout_constraintStart_toEndOf="@+id/imageView_Logo_empresa"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView_Cargo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="41dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView_Localizacao"
                tools:text="Confeitero(a)" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="237dp"
                android:text="@string/txt_geral"
                android:textColor="@color/bluetips"
                android:textSize="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_Logo_empresa" />

            <TextView
                android:id="@+id/textView_descricao_geral"
                android:layout_width="378dp"
                android:layout_height="133dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="4dp"
                android:text="Preparar uma ampla variedade de produtos como bolos, cookies, tortas, pães, etc., seguindo receitas tradicionais e modernas. Criar sobremesas novas e interessantes para renovar nossos cardápios e atrair o interesse dos clientes."
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="237dp"
                android:text="@string/request2"
                android:textColor="@color/bluetips"
                android:textSize="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.107"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_descricao_geral" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="372dp"
                android:layout_height="81dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="10dp"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:text="Criatividade e muita atenção aos detalhes.Capacidade de organização e de liderança.
Disposição para reforçar o conhecimento profissional.
Ensino Completo" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="202dp"
                android:text="@string/txt_other"
                android:textColor="@color/bluetips"
                android:textSize="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView_Outras_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="134dp"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:text="Mais informações: .........." />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginTop="134dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/bg_button_normal"
                android:text="@string/txt_candy"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
